fix: overflow

--- a/src/components/DataViewer/style.module.scss
+++ b/src/components/DataViewer/style.module.scss
@@ -7,6 +7,7 @@
   font-family: var(--gjFontMonospace);
   line-height: 1;
   background-color: var(--gjGray2);
+  overflow-x: auto;
 
   & > dl {
     display: grid;
@@ -18,6 +19,8 @@
     }
 
     & > dd {
+      word-break: break-all;
+
       &[title="String"] {
         color: var(--gjRed6);
       }
